--- a/yolo.html
+++ b/yolo.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div>
+    <div class="card">
       <div>
         <img src="/images/pull-shark.png" alt="Pull Shark" />
         <button>
