--- a/yolo.html
+++ b/yolo.html
@@ -8,17 +8,17 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <main class="container">
-      <div class="card">
-        <div class="card__yolo">
-          <div class="card__pullshark__img__container">
+    <main class="card">
+      <div class="card__content">
+        <div class="card__content__yolo card--content--header">
+          <div class="card__content__img__container">
             <img
-            src="/images/yolo-default.png"
-            alt="Pull Shark"
-            class="card__pullshark__img"
-          />
+              src="/images/yolo-default.png"
+              alt="Pull Shark"
+              class="card__content__img"
+            />
           </div>
-          <button class="card__pullshark__button">
+          <button class="card__content__button">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               viewBox="0 0 16 14"
@@ -34,9 +34,9 @@
           </button>
         </div>
 
-        <div class="card__content">
-          <div class="card__content__header">
-            <h3 class="card__content__heading">YOLO</h3>
+        <div class="card__body">
+          <div class="card__body__header">
+            <h3 class="card__body__heading">YOLO</h3>
             <svg
               xmlns="http://www.w3.org/2000/svg"
               viewBox="0 0 16 16"
@@ -50,12 +50,11 @@
               ></path>
             </svg>
           </div>
-          <p class="card__content__paragraph">You want it? You merge it.</p>
+          <p class="card__body__paragraph">You want it? You merge it.</p>
 
-
-          <div class="card__content__history">
-            <h4 class="card__content__history_heading">History</h4>
-            <div class="card__content__trophy">
+          <div class="card__body__history">
+            <h4>History</h4>
+            <div class="card__body__history__trophy">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 viewBox="0 0 16 16"
@@ -70,7 +69,7 @@
               </svg>
               <div>Unlocked Mar 11</div>
             </div>
-            <div class="card__content__repo">
+            <div class="card__body__history__repo">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 viewBox="0 0 16 16"
