--- a/shark.html
+++ b/shark.html
@@ -10,15 +10,15 @@
   <body>
     <main class="card">
       <div class="card__content">
-        <div class="card__content__pullshark card--content--header">
-          <div class="card__content__img-container">
+        <div class="card__pullshark card--header">
+          <div class="card__img-container">
             <img
               src="/images/pull-shark.png"
               alt="Pull Shark"
-              class="card__content__img"
+              class="card__img"
             />
           </div>
-          <button class="card__content__button">
+          <button class="card__button">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               viewBox="0 0 16 14"
@@ -35,8 +35,8 @@
         </div>
 
         <div class="card__body">
-          <div class="card__body__header">
-            <h3 class="card__body__heading">Pull Shark</h3>
+          <div class="card__header">
+            <h3 class="card__heading">Pull Shark</h3>
             <svg
               xmlns="http://www.w3.org/2000/svg"
               viewBox="0 0 16 16"
@@ -50,13 +50,13 @@
               ></path>
             </svg>
           </div>
-          <p class="card__body__paragraph">
+          <p class="card__paragraph">
             @baabashinelle opened pull requests that have been merged.
           </p>
 
-          <div class="card__body__history">
+          <div class="card__history">
             <h4>History</h4>
-            <div class="card__body__history__trophy">
+            <div class="card__trophy">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 viewBox="0 0 16 16"
@@ -71,7 +71,7 @@
               </svg>
               <div>Unlocked Mar 11</div>
             </div>
-            <div class="card__body__history__repo">
+            <div class="card__repo">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 viewBox="0 0 16 16"
