--- a/yolo.html
+++ b/yolo.html
@@ -10,15 +10,11 @@
   <body>
     <main class="card">
       <div class="card__content">
-        <div class="card__content__yolo card--content--header">
-          <div class="card__content__img-container">
-            <img
-              src="/images/yolo-default.png"
-              alt="Yolo"
-              class="card__content__img"
-            />
+        <div class="card__yolo card--header">
+          <div class="card__img-container">
+            <img src="/images/yolo-default.png" alt="Yolo" class="card__img" />
           </div>
-          <button class="card__content__button">
+          <button class="card__button">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               viewBox="0 0 16 14"
@@ -35,8 +31,8 @@
         </div>
 
         <div class="card__body">
-          <div class="card__body__header">
-            <h3 class="card__body__heading">YOLO</h3>
+          <div class="card__header">
+            <h3 class="card__heading">YOLO</h3>
             <svg
               xmlns="http://www.w3.org/2000/svg"
               viewBox="0 0 16 16"
@@ -50,11 +46,11 @@
               ></path>
             </svg>
           </div>
-          <p class="card__body__paragraph">You want it? You merge it.</p>
+          <p class="card__paragraph">You want it? You merge it.</p>
 
-          <div class="card__body__history">
+          <div class="card__history">
             <h4>History</h4>
-            <div class="card__body__history__trophy">
+            <div class="card__trophy">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 viewBox="0 0 16 16"
@@ -69,7 +65,7 @@
               </svg>
               <div><span>100% unlocked </span> · Unlocked Mar 26</div>
             </div>
-            <div class="card__body__history__repo">
+            <div class="card__repo">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 viewBox="0 0 16 16"
