--- a/yolo.html
+++ b/yolo.html
@@ -10,7 +10,7 @@
   <body>
     <main class="card">
       <div class="card__content">
-        <div class="card__yolo card--header">
+        <div class="card__content__yolo card--header">
           <div class="card__img-container">
             <img src="/images/yolo-default.png" alt="Yolo" class="card__img" />
           </div>
